--- a/profile-card__Clerigo/index.html
+++ b/profile-card__Clerigo/index.html
@@ -13,11 +13,12 @@
         <p>Web Developer | Designer!</p>
         <p>Coding is my passion!</p>
         <div class="social-icons">
-            <a href="#"><img src="icons/facebook.png" alt="Facebook"></a>
+            <a href="https://www.facebook.com/john.michael.clerigo.2025"><img src="icons/facebook.png" alt="Facebook"></a>
             <a href="#"><img src="icons/instagram.png" alt="Instagram"></a>
             <a href="#"><img src="icons/tik-tok.png" alt="Tik-Tok"></a>
         </div>
         <a href="about.html" class="btn">About Me</a>
     </div>
 </body>
+
 </html>
